feat: add longest substring

--- a/.pylintrc
+++ b/.pylintrc
@@ -88,7 +88,8 @@ disable=raw-checker-failed,
         use-symbolic-message-instead,
         missing-function-docstring,
         missing-class-docstring,
-        too-few-public-methods
+        too-few-public-methods,
+        consider-using-enumerate
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
